--- a/style.scss
+++ b/style.scss
@@ -1,27 +1,43 @@
 .container {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  width: 20px;
-  height: 20px;
-  transform: translate(-50%, -50%);
+  position: relative;
+  width: 10px;
+  height: 10px;
+  margin: 100px auto;
+  perspective: 160px;
+  transform-style: preserve-3d;
+  -webkit-backface-visibility: visible;
 }
-
 .container .paper {
+  position: absolute;
+  margin: auto;
+  left: -9999px;
+  right: -9999px;
+  top: -9999px;
+  bottom: -9999px;
   width: 35px;
   height: 45px;
-  background: #FFF;
-  border: 5px solid blueviolet;
-  position: absolute;
-  border-left: none;
+  background: #fff;
+  border: 5px solid #218EED;
+  border-left: 0;
+  transform-origin: 0% 50%;
 }
-
 .container .paper:nth-child(2) {
-  transform: rotate(180deg);
+  transform: rotateY(180deg);
 }
-
 .container .paper {
-  @for $i from 3 through 8 {
-    &:nth-child(#{$i}) {}
+  @for $i from 3 through 12 {
+    &:nth-child(#{$i}) {
+      animation: flip 2.5s infinite ease-in-out;
+      animation-delay: 0.5s;
+    }
+  }
+}
+@keyframes flip {
+  from {}
+  30% {
+    transform: rotateY(-180deg);
+  }
+  100% {
+    transform: rotateY(-180deg);
   }
 }
